# intercom-studiochat-middleware

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
bridge/: __init__.py  app.py  config.py  constants.py  context.py  handoff_lock.py  models.py
bridge/intercom/: __init__.py  actions.py  client.py  webhook.py
bridge/routing/: __init__.py  rollout.py  rules.py
bridge/studio_chat/: __init__.py  client.py  events.py
bridge/utils/: __init__.py  html.py  logging.py  markdown.py
tests/: __init__.py  conftest.py  test_attachment_support.py  test_config.py  test_context.py  test_e2e.py  test_handoff_branching.py  test_handoff_lock.py  test_image_support.py  test_intercom_actions.py  test_intercom_client.py  test_markdown.py  test_message_extraction.py  test_routing.py  test_studio_chat.py  test_webhook.py
